# music-video-platform

./: .dockerignore  .env.example  .env.v1_mock  .env.v1_production  .gitignore  AGENTS.md  AI_BACKEND_SWITCH_GUIDE.md  API_INTEGRATION.md  ARCHITECTURE_v2.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_JOURNAL.md  Design_Proposal.html  Dockerfile  PROJECT_AUDIT.md  PROJECT_SUMMARY.md  README.md  TONE_JS_INTEGRATION_PLAN.md  custom-skills-library.md  deploy.bat  deploy.sh  docker-compose.yml  modal_separate.py  nginx.conf  personal-coding-habits.md  project-pitfalls-library.md  render.yaml  run.py  supabase_setup.sql  wrangler.toml  wrangler.workers.toml
backend/: .env.example  Dockerfile  main.py  pyproject.toml  render.yaml  requirements.txt  secrets.local.json.example  test_inference_retry.py
backend/alembic/: env.py
backend/alembic/versions/: 001_v1_1_initial.py
backend/app/: models.py  websocket_manager.py
backend/app/core/: __init__.py  secrets.py
backend/app/db/: postgres.py
backend/app/middleware/: privacy.py
backend/app/models/: social.py  v1_core.py
backend/database/: init_supabase.sql
backend/docs/: DEPLOYMENT_CHECKLIST.md  FINAL_CODE_REVIEW.md  PR_REVIEW.md
backend/scripts/: beta_schema.sql  daily_credit_reset.py  test_one_click_publish.py
backend/tests/: test_demucs.py  test_e2e_integration.py  test_inference.py  test_mix_engine.py  test_real_service.py  test_services.py  test_websocket.py
backend/tools/: check_api.py  full_link_diagnostic.py  test_tts_flow.py  verify_env.py  ws_debug.py
(+397 files in other folders)
