[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "music-video-platform-backend"
version = "1.0.0"
description = "AI music creation and MV generation platform - backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "mido>=1.3.0",
    "numpy>=1.26.0",
    "librosa>=0.10.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23.0", "ruff>=0.2.0"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
